# jazelle

./: .eslintrc.js  .flowconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.js  package.json
.github/workflows/: ci.yml  release.yml  test.yml
commands/: add.js  align.js  bazel.js  build.js  bump.js  ci.js  dev.js  doctor.js  exec.js  flow.js  focus.js  install.js  lint.js  node.js  outdated.js  purge.js  remove.js  scaffold.js  script.js  sort.js  start.js  test.js  typecheck.js  upgrade.js  yarn.js
rules/: execute-command.js  flow-check.js  jazelle-dependencies.bzl  jazelle.bzl  untar.js  web-monorepo.bzl
templates/scaffold/: BUILD.bazel  WORKSPACE
test-types-upgrade/: manifest.json  package.json
tests/: index.js
tests/fixtures/batch-test-group/: WORKSPACE  package.json
tests/fixtures/bazel-command-retries/: WORKSPACE  package.json
tests/fixtures/bazel-dependent-builds/: BUILD.bazel  WORKSPACE
tests/fixtures/bazel-dependent-failure/: BUILD.bazel  (+2 more)
utils/: batch-test-group.js  bazel-commands.js  binary-paths.js  cached-semver.js  cached.js  cli.js  execute-hook.js  execute-project-command.js  find-changed-targets.js  generate-bazel-build-rules.js  generate-bazelignore.js  get-all-dependencies.js  get-downstreams.js  get-local-dependencies.js  get-manifest.js  get-root-dir.js  get-upstreams.js  is-project-installed.js  lockfile.js  node-helpers.js  parse-argv.js  red.js  report-mismatched-top-level-deps.js  sort-package-json.js  spawn-filtered.js  starlark.js  types-manager.js  upgrade-prompts.js  version-onboarding.js  yarn-commands.js
(+74 files in other folders)
